Update dashboard UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.dfirago.dlt.dashboard.DashboardActivity">
+        <activity android:name="com.dfirago.dlt.home.DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".category.CategoryActivity" />
 
         <activity android:name=".training.TrainingActivity" />
 
