--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.1'
+    }
+
 }
 
 def SUPPORT_VERSION = "25.3.1"
@@ -34,7 +39,6 @@ dependencies {
 
     compile "com.android.support:recyclerview-v7:$SUPPORT_VERSION"
     compile "com.android.support:appcompat-v7:$SUPPORT_VERSION"
-    compile "com.android.support:cardview-v7:$SUPPORT_VERSION"
     compile "com.android.support:design:$SUPPORT_VERSION"
     compile "com.android.support:support-v4:$SUPPORT_VERSION"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -44,15 +48,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // Gson
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.danilopianini:gson-extras:0.2.1'
+
+    // Apache Commons
     compile 'commons-io:commons-io:2.5'
     compile 'commons-lang:commons-lang:2.6'
 
+    //ButterKnife
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
+    // Dagger 2
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.google.dagger:dagger-android:2.11'
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+
+    // Tests
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
 }
