--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Apache Commons
     compile 'commons-io:commons-io:2.5'
     compile 'commons-lang:commons-lang:2.6'
+    compile 'org.apache.commons:commons-collections4:4.1'
 
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.6.0'
