--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,21 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url "http://objectbox.net/beta-repo/" }
+        maven { url 'http://objectbox.net/beta-repo/' }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'me.tatarka:gradle-retrolambda:3.6.1'
-        classpath "io.objectbox:objectbox-gradle-plugin:1.1.0"
+        classpath 'io.objectbox:objectbox-gradle-plugin:1.1.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        maven { url "http://objectbox.net/beta-repo/" }
+        maven { url 'http://objectbox.net/beta-repo/' }
+        maven { url 'https://maven.google.com' }
     }
 }
 
