--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         maven { url 'http://objectbox.net/beta-repo/' }
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -18,6 +19,7 @@ allprojects {
         jcenter()
         maven { url 'http://objectbox.net/beta-repo/' }
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
     }
 }
 
