--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,18 @@
             </intent-filter>
         </activity>
 
+        <provider
+            android:name=".common.expansion.ExpansionFileProvider"
+            android:authorities="com.dfirago.drivinglicensetest.provider.ExpansionFileProvider"
+            android:exported="false"
+            android:multiprocess="true">
+
+            <meta-data
+                android:name="mainVersion"
+                android:value="3" />
+
+        </provider>
+
     </application>
 
 </manifest>
